# quant-agent

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  app.py  build_dataset.py  config.py  fetch_hs300_etf.py  open.cmd  pull_cross_section_history.py  pyproject.toml  quant_panel_launch.cmd  refresh_data.py  requirements.txt  restart.cmd  run_backtest.py
assistant_data/knowledge/: README.md  kb_index.json
backtests/: simple_backtest.py
data/: README.md  hs300_etf.csv  hs300_etf_sample.csv
quantlab/: __init__.py  config.py  pipeline.py  scheduler.py
quantlab/analysis/: __init__.py  grid_search.py  history_store.py  validation.py
quantlab/assistant/: __init__.py  config.py  email_notifier.py  evaluator.py  knowledge_base.py  llm.py  memory.py  notifier.py  planner.py  tools.py
quantlab/backtest/: __init__.py  engine.py
quantlab/data/: __init__.py  fetcher.py  loader.py  tushare_provider.py
quantlab/factor_discovery/: __init__.py  benchmark_factors.py  blocks.py  convertible_bond_factors.py  datahub.py  decay_monitor.py  delivery_screener.py  evolution.py  factor_enhancements.py  factor_namer.py  factor_report.py  futures_factors.py  hypothesis.py  llm_supervisor.py  models.py  (+7 more)
reports/: equity_curve.csv  trades.csv
strategies/: ma_cross.py
tests/: conftest.py  test_agent_pipeline_stages.py  test_blocks.py  test_broker.py  test_custom_code_sandbox.py  test_data_survivor.py  test_decay_agent.py  test_enhancements.py  test_gpu_accelerator.py  test_integration_smoke.py  test_live_simulator.py  test_portfolio.py  test_scheduler.py  test_trading.py
(+72 files in other folders)
